--- a/index.css
+++ b/index.css
@@ -1,3 +1,56 @@
-#heading {
-    color: red
+.header {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+
+.logo {
+    width: 120px;
+}
+
+.nav-items {
+    padding: 0px 20px;
+}
+
+.nav-items>ul {
+    display: flex;
+    list-style-type: none;
+    font-size: 20px;
+}
+
+.nav-items>ul>li {
+    padding: 10px;
+    margin: 10px;
+}
+
+.res-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.res-card {
+    width: 200px;
+    /* height: 300px; */
+    padding: 5px;
+    background-color: #f0f0f0;
+    margin: 10px;
+}
+
+.res-card:hover {
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+.res-logo {
+    width: 100%;
+    height: 120px;
+}
+
+.search {
+    padding: 10px;
+}
+
+.filter-btn {
+    margin: 10px;
+    cursor: pointer;
 }
